--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PiFM Music Station",
+  "name": "PiFMStation",
   "version": "1.0.0",
   "description": "",
   "main": "Gruntfile.js",
