--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "Gruntfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rom1415/pifmstation"
+  },
   "dependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
